--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "webpack-cli": "^3.0.0"
   },
   "dependencies": {
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "perfect-scrollbar": "^1.3.0",
+    "slick-carousel": "^1.8.1"
   }
 }
