--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "webpack --watch",
     "production": "cross-env NODE_ENV=production webpack"
   },
-  "author": "",
+  "author": "Askarov Orozbek",
   "license": "ISC",
   "devDependencies": {
     "clean-webpack-plugin": "^0.1.19",
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "jquery": "^3.3.1",
+    "npm": "^6.1.0",
     "perfect-scrollbar": "^1.3.0",
     "slick-carousel": "^1.8.1"
   }
